--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -9,3 +9,11 @@
 .bgwhite {
   background-color: white;
 }
+
+@media only screen and (max-width: 500px){
+  .overlay{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+}
