--- a/src/Components/Projects/Gallery.css
+++ b/src/Components/Projects/Gallery.css
@@ -69,4 +69,19 @@
   .galleryContainer{
     margin-left: 30px;
   }
+
+  .projectCard{
+    width: 280px;
+  }
+
+  .galleryImage {
+    width: auto;
+    max-height: 240px;
+    margin: 0px 20px;
+  }
+
+  .cardButton{
+    margin-left: 35px;
+  }
+
 }
