--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,7 +1,8 @@
-.aboutMe {
+.aboutMe{
   font-family: 'Montserrat', sans-serif;
-  display: flex;
-  justify-content: center;
+  display: block;
+  margin: 0 auto;
+  width: 50%;
   align-items: center;
   flex-wrap: wrap;
   padding-top: 150px;
@@ -9,14 +10,14 @@
 }
 
 .aboutMe p {
-  width: 50%;
+  font-size: 1rem;
+  width: 80%;
   padding-right: 50px;
   margin-top: 0px;
 }
 
-.aboutMe h1 {
+.aboutMe .story {
   font-size: 3rem;
-  transform: rotate(270deg);
   font-family: 'Tuesday Night';
 }
 
@@ -30,7 +31,7 @@
   font-size: 1.6rem;
   margin-top: 20px;
   padding: 5px 10px 5px 15px;
-  background-color: #12d8a0be;
+  background-color: #12d8a0be !important;
   box-shadow: 6px 6px 12px rgba(37, 37, 37, 0.507);
 }
 
@@ -49,7 +50,13 @@
     margin-bottom: 70%;
     font-size: 1.5rem;
     margin-left: 20px;
-  }}
+  }
+
+  .aboutMe .story{
+    font-size: 2rem;
+    transform: rotate(90deg);
+    margin-left: 30%;
+  }
 
   .aboutMe p {
     font-size: .8rem;
@@ -60,6 +67,7 @@
     padding: 5px 0px 5px 25px;
     width: 150px;
   }
+}
 
 @font-face {
   font-family: 'Tuesday Night';
