--- a/src/Components/Projects/Gallery.css
+++ b/src/Components/Projects/Gallery.css
@@ -4,8 +4,9 @@
   width: 100%;
   flex-wrap: wrap;
   margin: 0 auto;
-  padding-top: 190px;
+  margin-top: 190px;
   background-color: white;
+  position: static;
 }
 
 .projectCard{
